@@ -16,15 +16,18 @@
  */
 package io.microsphere.reflect;
 
-import io.microsphere.lang.function.ThrowableConsumer;
-import io.microsphere.lang.function.ThrowableFunction;
-import io.microsphere.lang.function.ThrowableSupplier;
+import io.microsphere.logging.Logger;
 import io.microsphere.util.BaseUtils;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.reflect.AccessibleObject;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
+import java.lang.reflect.Member;
+
+import static io.microsphere.constants.SeparatorConstants.LINE_SEPARATOR;
+import static io.microsphere.invoke.MethodHandleUtils.findVirtual;
+import static io.microsphere.logging.LoggerFactory.getLogger;
+import static io.microsphere.reflect.MemberUtils.asMember;
+import static io.microsphere.reflect.MemberUtils.isPublic;
 
 /**
  * The utilities class of {@link AccessibleObject}
@@ -35,54 +38,129 @@ import java.lang.reflect.Method;
  */
 public abstract class AccessibleObjectUtils extends BaseUtils {
 
+    private static final Logger logger = getLogger(AccessibleObjectUtils.class);
+
     /**
-     * Execute an {@link AccessibleObject} instance
-     *
-     * @param object   {@link AccessibleObject} instance, {@link Field}, {@link Method} or {@link Constructor}
-     * @param callback the call back to execute {@link AccessibleObject} object
-     * @param <A>      The type or subtype of {@link AccessibleObject}
+     * The method name of {@link AccessibleObject#canAccess(Object)} since JDK 9
      */
-    public static <A extends AccessibleObject> void execute(A object, ThrowableConsumer<A> callback) {
-        execute(object, a -> {
-            callback.accept(a);
-            return null;
-        });
+    private static final String canAccessMethodName = "canAccess";
+
+    /**
+     * The method name of {@link AccessibleObject#trySetAccessible()} since JDK 9
+     */
+    private static final String trySetAccessibleMethodName = "trySetAccessible";
+
+    /**
+     * The {@link MethodHandle} of {@link AccessibleObject#canAccess(Object)} since JDK 9
+     * if <code>canAccessMethodHandle == null</code>, it indicates the version of JDK is less than 9
+     */
+    private static final MethodHandle canAccessMethodHandle = findVirtual(AccessibleObject.class, canAccessMethodName, Object.class);
+
+    /**
+     * The {@link MethodHandle} of {@link AccessibleObject#trySetAccessible()} since JDK 9
+     * if <code>canAccessMethodHandle == null</code>, it indicates the version of JDK is less than 9
+     */
+    private static final MethodHandle trySetAccessibleMethodHandle = findVirtual(AccessibleObject.class, trySetAccessibleMethodName);
+
+    /**
+     * The class name of {@linkplain java.lang.reflect.InaccessibleObject} since JDK 9
+     */
+    public static final String INACCESSIBLE_OBJECT_EXCEPTION_CLASS_NAME = "java.lang.reflect.InaccessibleObjectException";
+
+    /**
+     * Try to set the {@link AccessibleObject} accessible.
+     * <p>
+     * If JDK >=9 , {@link AccessibleObject#trySetAccessible()} method will be invoked,
+     * or {@link AccessibleObject#setAccessible(boolean)} method will be invoked if
+     * {@link AccessibleObject#isAccessible()} is <code>false</code>.
+     *
+     * @param accessibleObject the {@link AccessibleObject} instance
+     * @return
+     * @see AccessibleObject#trySetAccessible()
+     * @see AccessibleObject#setAccessible(boolean)
+     * @see AccessibleObject#isAccessible()
+     */
+    public static boolean trySetAccessible(AccessibleObject accessibleObject) {
+        MethodHandle methodHandle = trySetAccessibleMethodHandle;
+        if (methodHandle == null) { // JDK < 9 or not be initialized
+            setAccessible(accessibleObject);
+            return true;
+        } else { // JDK 9+
+            return trySetAccessible(methodHandle, accessibleObject);
+        }
     }
 
     /**
-     * Executes the {@link AccessibleObject}
+     * Set the {@link AccessibleObject} accessible.
      *
-     * @param accessibleObject {@link AccessibleObject}
-     * @param supplier         {@link ThrowableConsumer}
-     * @throws RuntimeException if execution failed
+     * @param accessibleObject the {@link AccessibleObject} instance
+     * @return previous accessible status of the {@link AccessibleObject} instance
      */
-    public static <A extends AccessibleObject, R> R execute(A accessibleObject, ThrowableSupplier<R> supplier) {
-        return execute(accessibleObject, (ThrowableFunction<A, R>) a -> supplier.execute());
-    }
-
-    /**
-     * Execute an {@link AccessibleObject} instance
-     *
-     * @param accessibleObject {@link AccessibleObject} instance, {@link Field}, {@link Method} or {@link Constructor}
-     * @param callback         the call back to execute {@link AccessibleObject} accessibleObject
-     * @param <A>              The type or subtype of {@link AccessibleObject}
-     * @param <R>              The type of execution result
-     * @return The execution result
-     * @throws NullPointerException If <code>accessibleObject</code> is <code>null</code>
-     */
-    public static <A extends AccessibleObject, R> R execute(A accessibleObject, ThrowableFunction<A, R> callback) throws NullPointerException {
+    static boolean setAccessible(AccessibleObject accessibleObject) {
         boolean accessible = accessibleObject.isAccessible();
-        final R result;
-        try {
-            if (!accessible) {
+        if (!accessible) {
+            try {
                 accessibleObject.setAccessible(true);
-            }
-            result = callback.execute(accessibleObject);
-        } finally {
-            if (!accessible) {
-                accessibleObject.setAccessible(accessible);
+            } catch (RuntimeException e) {
+                String exceptionClassName = e.getClass().getName();
+                if (INACCESSIBLE_OBJECT_EXCEPTION_CLASS_NAME.equals(exceptionClassName)) {
+                    // JDK 16+ : JEP 396: Strongly Encapsulate JDK Internals by Default - https://openjdk.org/jeps/396
+                    String errorMessage = "JEP 396: Strongly Encapsulate JDK Internals by Default since JDK 16 - https://openjdk.org/jeps/396 ."
+                            + LINE_SEPARATOR
+                            + "It's require to add JVM Options '--add-opens java.base/java.lang.invoke=ALL-UNNAMED' for running";
+                    logger.error(errorMessage, e);
+                }
+                throw e;
             }
         }
-        return result;
+        return accessible;
+    }
+
+    /**
+     * Test if the caller can access this reflected object. If this reflected
+     * object corresponds to an instance method or field then this method tests
+     * if the caller can access the given {@code obj} with the reflected object.
+     * For instance methods or fields then the {@code obj} argument must be an
+     * instance of the {@link Member#getDeclaringClass() declaring class}. For
+     * static members and constructors then {@code obj} must be {@code null}.
+     *
+     * @param object an instance object of the declaring class of this reflected object if it is an instance method or field
+     * @return {@code true} if the caller can access this reflected object.
+     */
+    public static boolean canAccess(Object object, AccessibleObject accessibleObject) {
+
+        Member member = asMember(accessibleObject);
+
+        if (isPublic(member)) {
+            return true;
+        }
+
+        Boolean access = tryCanAccess(object, accessibleObject);
+
+        return access == null ? accessibleObject.isAccessible() : access;
+    }
+
+    private static boolean trySetAccessible(MethodHandle methodHandle, AccessibleObject accessibleObject) {
+        boolean accessible = false;
+        try {
+            accessible = (boolean) methodHandle.invokeExact(accessibleObject);
+        } catch (Throwable e) {
+            logger.error("java.lang.reflect.AccessibleObject#trySetAccessible() can't be invoked, accessible object : {}",
+                    accessibleObject, e);
+        }
+        return accessible;
+    }
+
+    private static Boolean tryCanAccess(Object object, AccessibleObject accessibleObject) {
+        Boolean access = null;
+        if (canAccessMethodHandle != null) { // JDK 9+
+            try {
+                access = (boolean) canAccessMethodHandle.invokeExact(accessibleObject, object);
+            } catch (Throwable e) {
+                logger.error("java.lang.reflect.AccessibleObject#canAccess(Object) can't be invoked, object : {} , accessible object : {}",
+                        object, accessibleObject, e);
+            }
+        }
+        return access;
     }
 }
